qt-restricted-extras/qscintilla6/gen_qsciapis.nim

import Qt6PrintSupport_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6PrintSupport")
{.compile("gen_qsciapis.cpp", cflags).}


import gen_qsciapis_types
export gen_qsciapis_types

import
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qsciabstractapis,
  gen_qscilexer
export
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qsciabstractapis,
  gen_qscilexer

type cQsciAPIs*{.exportc: "QsciAPIs", incompleteStruct.} = object

proc fcQsciAPIs_new(lexer: pointer): ptr cQsciAPIs {.importc: "QsciAPIs_new".}
proc fcQsciAPIs_metaObject(self: pointer, ): pointer {.importc: "QsciAPIs_metaObject".}
proc fcQsciAPIs_metacast(self: pointer, param1: cstring): pointer {.importc: "QsciAPIs_metacast".}
proc fcQsciAPIs_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QsciAPIs_metacall".}
proc fcQsciAPIs_tr(s: cstring): struct_miqt_string {.importc: "QsciAPIs_tr".}
proc fcQsciAPIs_add(self: pointer, entry: struct_miqt_string): void {.importc: "QsciAPIs_add".}
proc fcQsciAPIs_clear(self: pointer, ): void {.importc: "QsciAPIs_clear".}
proc fcQsciAPIs_load(self: pointer, filename: struct_miqt_string): bool {.importc: "QsciAPIs_load".}
proc fcQsciAPIs_remove(self: pointer, entry: struct_miqt_string): void {.importc: "QsciAPIs_remove".}
proc fcQsciAPIs_prepare(self: pointer, ): void {.importc: "QsciAPIs_prepare".}
proc fcQsciAPIs_cancelPreparation(self: pointer, ): void {.importc: "QsciAPIs_cancelPreparation".}
proc fcQsciAPIs_defaultPreparedName(self: pointer, ): struct_miqt_string {.importc: "QsciAPIs_defaultPreparedName".}
proc fcQsciAPIs_isPrepared(self: pointer, ): bool {.importc: "QsciAPIs_isPrepared".}
proc fcQsciAPIs_loadPrepared(self: pointer, ): bool {.importc: "QsciAPIs_loadPrepared".}
proc fcQsciAPIs_savePrepared(self: pointer, ): bool {.importc: "QsciAPIs_savePrepared".}
proc fcQsciAPIs_updateAutoCompletionList(self: pointer, context: struct_miqt_array, list: struct_miqt_array): void {.importc: "QsciAPIs_updateAutoCompletionList".}
proc fcQsciAPIs_autoCompletionSelected(self: pointer, sel: struct_miqt_string): void {.importc: "QsciAPIs_autoCompletionSelected".}
proc fcQsciAPIs_callTips(self: pointer, context: struct_miqt_array, commas: cint, style: cint, shifts: struct_miqt_array): struct_miqt_array {.importc: "QsciAPIs_callTips".}
proc fcQsciAPIs_event(self: pointer, e: pointer): bool {.importc: "QsciAPIs_event".}
proc fcQsciAPIs_installedAPIFiles(self: pointer, ): struct_miqt_array {.importc: "QsciAPIs_installedAPIFiles".}
proc fcQsciAPIs_apiPreparationCancelled(self: pointer, ): void {.importc: "QsciAPIs_apiPreparationCancelled".}
proc fQsciAPIs_connect_apiPreparationCancelled(self: pointer, slot: int) {.importc: "QsciAPIs_connect_apiPreparationCancelled".}
proc fcQsciAPIs_apiPreparationStarted(self: pointer, ): void {.importc: "QsciAPIs_apiPreparationStarted".}
proc fQsciAPIs_connect_apiPreparationStarted(self: pointer, slot: int) {.importc: "QsciAPIs_connect_apiPreparationStarted".}
proc fcQsciAPIs_apiPreparationFinished(self: pointer, ): void {.importc: "QsciAPIs_apiPreparationFinished".}
proc fQsciAPIs_connect_apiPreparationFinished(self: pointer, slot: int) {.importc: "QsciAPIs_connect_apiPreparationFinished".}
proc fcQsciAPIs_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QsciAPIs_tr2".}
proc fcQsciAPIs_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QsciAPIs_tr3".}
proc fcQsciAPIs_isPrepared1(self: pointer, filename: struct_miqt_string): bool {.importc: "QsciAPIs_isPrepared1".}
proc fcQsciAPIs_loadPrepared1(self: pointer, filename: struct_miqt_string): bool {.importc: "QsciAPIs_loadPrepared1".}
proc fcQsciAPIs_savePrepared1(self: pointer, filename: struct_miqt_string): bool {.importc: "QsciAPIs_savePrepared1".}
proc fQsciAPIs_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QsciAPIs_virtualbase_metaObject".}
proc fcQsciAPIs_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_metaObject".}
proc fQsciAPIs_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QsciAPIs_virtualbase_metacast".}
proc fcQsciAPIs_override_virtual_metacast(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_metacast".}
proc fQsciAPIs_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QsciAPIs_virtualbase_metacall".}
proc fcQsciAPIs_override_virtual_metacall(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_metacall".}
proc fQsciAPIs_virtualbase_updateAutoCompletionList(self: pointer, context: struct_miqt_array, list: struct_miqt_array): void{.importc: "QsciAPIs_virtualbase_updateAutoCompletionList".}
proc fcQsciAPIs_override_virtual_updateAutoCompletionList(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_updateAutoCompletionList".}
proc fQsciAPIs_virtualbase_autoCompletionSelected(self: pointer, sel: struct_miqt_string): void{.importc: "QsciAPIs_virtualbase_autoCompletionSelected".}
proc fcQsciAPIs_override_virtual_autoCompletionSelected(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_autoCompletionSelected".}
proc fQsciAPIs_virtualbase_callTips(self: pointer, context: struct_miqt_array, commas: cint, style: cint, shifts: struct_miqt_array): struct_miqt_array{.importc: "QsciAPIs_virtualbase_callTips".}
proc fcQsciAPIs_override_virtual_callTips(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_callTips".}
proc fQsciAPIs_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QsciAPIs_virtualbase_event".}
proc fcQsciAPIs_override_virtual_event(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_event".}
proc fQsciAPIs_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QsciAPIs_virtualbase_eventFilter".}
proc fcQsciAPIs_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_eventFilter".}
proc fQsciAPIs_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QsciAPIs_virtualbase_timerEvent".}
proc fcQsciAPIs_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_timerEvent".}
proc fQsciAPIs_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QsciAPIs_virtualbase_childEvent".}
proc fcQsciAPIs_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_childEvent".}
proc fQsciAPIs_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QsciAPIs_virtualbase_customEvent".}
proc fcQsciAPIs_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_customEvent".}
proc fQsciAPIs_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QsciAPIs_virtualbase_connectNotify".}
proc fcQsciAPIs_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_connectNotify".}
proc fQsciAPIs_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QsciAPIs_virtualbase_disconnectNotify".}
proc fcQsciAPIs_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QsciAPIs_override_virtual_disconnectNotify".}
proc fcQsciAPIs_staticMetaObject(): pointer {.importc: "QsciAPIs_staticMetaObject".}
proc fcQsciAPIs_delete(self: pointer) {.importc: "QsciAPIs_delete".}


func init*(T: type gen_qsciapis_types.QsciAPIs, h: ptr cQsciAPIs): gen_qsciapis_types.QsciAPIs =
  T(h: h)
proc create*(T: type gen_qsciapis_types.QsciAPIs, lexer: gen_qscilexer.QsciLexer): gen_qsciapis_types.QsciAPIs =
  gen_qsciapis_types.QsciAPIs.init(fcQsciAPIs_new(lexer.h))

proc metaObject*(self: gen_qsciapis_types.QsciAPIs, ): gen_qobjectdefs.QMetaObject =
  gen_qobjectdefs.QMetaObject(h: fcQsciAPIs_metaObject(self.h))

proc metacast*(self: gen_qsciapis_types.QsciAPIs, param1: cstring): pointer =
  fcQsciAPIs_metacast(self.h, param1)

proc metacall*(self: gen_qsciapis_types.QsciAPIs, param1: cint, param2: cint, param3: pointer): cint =
  fcQsciAPIs_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qsciapis_types.QsciAPIs, s: cstring): string =
  let v_ms = fcQsciAPIs_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc add*(self: gen_qsciapis_types.QsciAPIs, entry: string): void =
  fcQsciAPIs_add(self.h, struct_miqt_string(data: entry, len: csize_t(len(entry))))

proc clear*(self: gen_qsciapis_types.QsciAPIs, ): void =
  fcQsciAPIs_clear(self.h)

proc load*(self: gen_qsciapis_types.QsciAPIs, filename: string): bool =
  fcQsciAPIs_load(self.h, struct_miqt_string(data: filename, len: csize_t(len(filename))))

proc remove*(self: gen_qsciapis_types.QsciAPIs, entry: string): void =
  fcQsciAPIs_remove(self.h, struct_miqt_string(data: entry, len: csize_t(len(entry))))

proc prepare*(self: gen_qsciapis_types.QsciAPIs, ): void =
  fcQsciAPIs_prepare(self.h)

proc cancelPreparation*(self: gen_qsciapis_types.QsciAPIs, ): void =
  fcQsciAPIs_cancelPreparation(self.h)

proc defaultPreparedName*(self: gen_qsciapis_types.QsciAPIs, ): string =
  let v_ms = fcQsciAPIs_defaultPreparedName(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isPrepared*(self: gen_qsciapis_types.QsciAPIs, ): bool =
  fcQsciAPIs_isPrepared(self.h)

proc loadPrepared*(self: gen_qsciapis_types.QsciAPIs, ): bool =
  fcQsciAPIs_loadPrepared(self.h)

proc savePrepared*(self: gen_qsciapis_types.QsciAPIs, ): bool =
  fcQsciAPIs_savePrepared(self.h)

proc updateAutoCompletionList*(self: gen_qsciapis_types.QsciAPIs, context: seq[string], list: seq[string]): void =
  var context_CArray = newSeq[struct_miqt_string](len(context))
  for i in 0..<len(context):
    context_CArray[i] = struct_miqt_string(data: context[i], len: csize_t(len(context[i])))

  var list_CArray = newSeq[struct_miqt_string](len(list))
  for i in 0..<len(list):
    list_CArray[i] = struct_miqt_string(data: list[i], len: csize_t(len(list[i])))

  fcQsciAPIs_updateAutoCompletionList(self.h, struct_miqt_array(len: csize_t(len(context)), data: if len(context) == 0: nil else: addr(context_CArray[0])), struct_miqt_array(len: csize_t(len(list)), data: if len(list) == 0: nil else: addr(list_CArray[0])))

proc autoCompletionSelected*(self: gen_qsciapis_types.QsciAPIs, sel: string): void =
  fcQsciAPIs_autoCompletionSelected(self.h, struct_miqt_string(data: sel, len: csize_t(len(sel))))

proc callTips*(self: gen_qsciapis_types.QsciAPIs, context: seq[string], commas: cint, style: cint, shifts: seq[cint]): seq[string] =
  var context_CArray = newSeq[struct_miqt_string](len(context))
  for i in 0..<len(context):
    context_CArray[i] = struct_miqt_string(data: context[i], len: csize_t(len(context[i])))

  var shifts_CArray = newSeq[cint](len(shifts))
  for i in 0..<len(shifts):
    shifts_CArray[i] = shifts[i]
